new-jekyll/_sass/_styles.scss
html, body {
  font-family: 'Roboto', 'Helvetica', sans-serif;
  margin: 0;
  padding: 0;
}
.mdl-layout.is-small-screen .mdl-layout__header-row h3 {
  font-size: inherit;
}
.mdl-layout__tab-bar-button {
  display: none;
}
.mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
  display: none;
}
.mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
.mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
  overflow: visible;
}
.mdl-layout__tab-bar-container {
  height: 64px;
}
.mdl-layout__tab-bar {
  padding: 0;
  padding-left: 32px;
  padding-right: 32px;
  box-sizing: border-box;
  height: 100%;
  width: 100%;

  .mdl-layout__tab {
    height: 64px;
    line-height: 64px;
  }

  .mdl-layout-title {
    height: 64px;
    line-height: 64px;

    a {
      color:inherit;
      text-decoration: none;
    }
  }

  .mdl-layout__tab.is-active::after {
    background-color: white !important;
  }
}

.mdl-textfield__input {
  border-bottom: 1px solid white;
}

main > .mdl-layout__tab-panel {
  padding: 8px;
  padding-top: 48px;
}
.mdl-card {
  height: auto;
  display: flex;
  flex-direction: column;
  border-radius: 2px;
  padding: 80px 56px;
  margin-bottom: 80px;
}
.mdl-card > * {
  height: auto;
}
.mdl-card .mdl-card__supporting-text {
  margin: 40px;
  flex-grow: 1;
  padding: 0;
  color: inherit;
  width: calc(100% - 80px);
}
.mdl-card__supporting-text h4 {
  margin-top: 0;
  margin-bottom: 20px;
}
.mdl-card__actions {
  margin: 0;
  padding: 4px 40px;
  color: inherit;
}
.mdl-card__actions a {
  color: #00BCD4;
  margin: 0;
}
.mdl-card__actions a:hover,
.mdl-card__actions a:active {
  color: inherit;
  background-color: transparent;
}
.mdl-card__supporting-text + .mdl-card__actions {
  border-top: 1px solid rgba(0, 0, 0, 0.12);
}
#add {
  position: absolute;
  right: 40px;
  top: 36px;
  z-index: 999;
}
.mdl-layout__content section:not(:last-of-type) {
  position: relative;
  margin-bottom: 48px;
}
section.section--center {
  max-width: 860px;
}
#features section.section--center {
  max-width: 620px;
}
section > header{
  display: flex;
  align-items: center;
  justify-content: center;
}
section > .section__play-btn {
  min-height: 200px;
}
section > header > .material-icons {
  font-size: 3rem;
}
section > button {
  position: absolute;
  z-index: 99;
  top: 8px;
  right: 8px;
}
section .section__circle {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-grow: 0;
  flex-shrink: 1;
}
section .section__text {
  flex-grow: 1;
  flex-shrink: 0;
  padding-top: 8px;
}
section .section__text h5 {
  font-size: inherit;
  margin: 0;
  margin-bottom: 0.5em;
}
section .section__text a {
  text-decoration: none;
}
section .section__circle-container > .section__circle-container__circle {
  width: 64px;
  height: 64px;
  border-radius: 32px;
  margin: 8px 0;
}
section.section--footer .section__circle--big {
  width: 100px;
  height: 100px;
  border-radius: 50px;
  margin: 8px 32px;
}
.is-small-screen section.section--footer .section__circle--big {
  width: 50px;
  height: 50px;
  border-radius: 25px;
  margin: 8px 16px;
}
section.section--footer {
  padding: 64px 0;
  margin: 0 -8px -8px -8px;
}
section.section--center .section__text:not(:last-child) {
  border-bottom: 1px solid rgba(0,0,0,.13);
}
.mdl-card .mdl-card__supporting-text > h3:first-child {
  margin-bottom: 24px;
}
.mdl-layout__tab-panel:not(#overview) {
  background-color: white;
}
#features section {
  margin-bottom: 72px;
}
#features h4, #features h5 {
  margin-bottom: 16px;
}
.toc {
  border-left: 4px solid #C1EEF4;
  margin: 24px;
  padding: 0;
  padding-left: 8px;
  display: flex;
  flex-direction: column;
}
.toc h4 {
  font-size: 0.9rem;
  margin-top: 0;
}
.toc a {
  color: #4DD0E1;
  text-decoration: none;
  font-size: 16px;
  line-height: 28px;
  display: block;
}
.mdl-menu__container {
  z-index: 99;
}
.right {
  float: right;
  margin-left: 1.5em;
}
.left {
  float: left;
  margin-right: 1.5em;
}
.card-wide > .mdl-card__title {
  color: #fff;
  height: 176px;
  background: url('../assets/demos/welcome_card.jpg') center / cover;
}
.card-wide > .mdl-card__menu {
  color: #fff;
 }
.vimeo {
  position: relative;
  width: 100%;
}
.vimeo:before {
  content: "";
  display: block;
  padding-top: 56.25%;
}
.vimeo-player {
  position:  absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

